--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-procmacro-quickstart-template"
+name = "{{crate_name}}"
 version = "0.1.0"
 authors = ["Eugene P. <eupn@protonmail.com>"]
 description = "A `cargo generate` template for quick-starting a procedural macro crate"
