--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rust: stable
 before_script:
   - cargo install cargo-generate
 script:
+  - cd ..
   - cargo generate --git https://github.com/eupn/rust-procmacro-quickstart-template --name projectname
   - cd projectname
-  - cat Cargo.toml
+  - pwd
   - cargo check
